@@ -1,3 +1,10 @@
+2009-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	*
+	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
+	reset the status of pending connections if an error occurs during
+	a collection operation.
+
 2009-03-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js
